[package]
name = "app"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.60"
js-sys = "0.3.37"
web-sys = { version = "0.3.37", features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
] }
